--- a/src/pug/pages/how-to-pay.pug
+++ b/src/pug/pages/how-to-pay.pug
@@ -29,7 +29,7 @@ block content
               span.u--txt-bold На сайте.
               span.u--txt-thin Мы принимаем к оплате банковские карты и электронные деньги.
         .grid__col-md-2.grid__col-sm-12.grid__col-xs-12.grid--justify-end
-          a(href="#").button.button_primary.u--txt-center.u--vrt-md Перейти к каталогу
+          a(href="#").button.button_primary.u--txt-center.u--vrt-lg Перейти к каталогу
 
     
     
