--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -14,7 +14,7 @@ block content
   main.page__content
     +breadcrumbs
     +product
-    .u--vrt-md
+    .u--vrt-lg
       +related
     .u--vrt-sm
       +features
