Minor fixes for main page, adedd pics for order

--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -46,13 +46,13 @@ block content
                 |Consequuntur cum delectus magni minus dicta minima molestiae! Inventore, rem.
               a(href="#").button
                 |Подробнее
-    //- .u--vrt-sm
-    //-   +features
-    //- .u--vrt-sm.grid__container
-    //-   .grid
-    //-     .grid__col-md-6
-    //-       +newsblock
-    //-     .grid__col-md-3
-    //-       +partners
-    //-     .grid__col-md-3
-    //-       +subscribe
+    .u--vrt-sm
+      +features
+    .u--vrt-sm.grid__container
+      .grid
+        .grid__col-md-6
+          +newsblock
+        .grid__col-md-3
+          +partners
+        .grid__col-md-3
+          +subscribe
