--- a/src/components/carousel/_carousel.scss
+++ b/src/components/carousel/_carousel.scss
@@ -1,5 +1,7 @@
 .carousel {
     position: relative;
+    max-width: 1160px;
+    margin: auto;
     &__list {
         padding: 0;
         margin: 0;
