--- a/src/components/main-page/_main-page.scss
+++ b/src/components/main-page/_main-page.scss
@@ -1,12 +1,14 @@
 .main-page {
     &__title {
+        padding-left: $reflex-cell-spacing;
         margin-top: 5rem;
         margin-bottom: 3rem;
     }
-    &__title img{
+    &__title img {
         margin-right: 1rem;
     }
     &__about-title {
+        padding-left: $reflex-cell-spacing;
         padding-top: 2rem;
         padding-bottom: 2rem;
         background-color: $black;
@@ -16,6 +18,8 @@
         margin-bottom: 1.5rem;
     }
     &__about-description {
+        margin-right: $reflex-cell-spacing;
+        margin-left: $reflex-cell-spacing;
         font-weight: 400;
         line-height: 27px;
         padding-bottom: 1.5rem;
