--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -51,4 +51,5 @@
 @import 'contacts/_contacts';
 @import 'carousel/_carousel';
 @import 'notice/_notice';
+@import 'steps/_steps';
 @import 'main-page/_main-page';
