--- a/src/components/main-page/_main-page.scss
+++ b/src/components/main-page/_main-page.scss
@@ -26,6 +26,14 @@
         border-bottom: 2px solid $black;
         margin-bottom: 2rem;
     }
-    &__carousel-title {}
-    &__carousel-description {}
+    &__carousel-title {
+        font-size: 14px;
+        font-weight: 500;
+        margin-bottom: 2rem;
+    }
+    &__carousel-description {
+        font-weight: 100;
+        line-height: 14px;
+        margin-bottom: 2rem;
+    }
 }
