--- a/src/components/notice/_notice.scss
+++ b/src/components/notice/_notice.scss
@@ -5,6 +5,7 @@
     background-color: $white;
     border-top: 3px solid $black;
     border-bottom: 3px solid $black;
+    z-index: 10;
     &__button {
         margin-top: 1rem;
         margin-bottom: 1rem;
