Worked on step2

--- a/src/components/steps/_steps.scss
+++ b/src/components/steps/_steps.scss
@@ -123,17 +123,17 @@
     font-weight: 500;
     padding-top: 2rem;
     padding-bottom: 2rem;
-  }
-
-  //*Labels*//
-  &__label{
+  } //*Labels*//
+  &__label {
     margin-bottom: 1rem;
     cursor: pointer;
     display: inline-block;
   }
-  &__input{
+  &__input {
     display: inline-block;
   }
-  &__step {}
-  &__step_1 {}
+  &__confirm-address {
+    border: 1px solid $black;
+    border-radius: 5px;
+  }
 }
