--- a/src/components/grid/_grid.scss
+++ b/src/components/grid/_grid.scss
@@ -22,4 +22,10 @@
     &--offset-right-1 {
         margin-right: 8.333333%;
     }
+    &--offset-left-2 {
+        margin-left: 16%;
+    }
+    &--offset-left-6 {
+        margin-left: 50%;
+    }
 }
