--- a/src/components/steps/step-2.pug
+++ b/src/components/steps/step-2.pug
@@ -2,9 +2,9 @@
   h1.steps__title
     |Подтвердите заказ
   .grid
+    h3.grid__col-md-12.steps__subtitle.grid--offset-left-2
+      |Личные данные получателя заказа
     .grid__col-md-6
-      h3.steps__subtitle
-        |Личные данные получателя заказа
       .grid
         label.form__label.steps__label.grid__col-md-4.u--txt-right.grid--align-self-center(for="fio") 
           |ФИО
