--- a/src/components/grid/_grid.scss
+++ b/src/components/grid/_grid.scss
@@ -22,6 +22,9 @@
     &--offset-right-1 {
         margin-right: 8.333333%;
     }
+    &--offset-left-1 {
+        margin-left: 8.33333%;
+    }
     &--offset-left-2 {
         margin-left: 16%;
     }
