--- a/src/components/steps/step-2.pug
+++ b/src/components/steps/step-2.pug
@@ -28,3 +28,6 @@
           |Итоговая стоимость: 17 567 руб. 
       a(href="#").button.button_hollow.steps__button.grid--justify-center
         |Изменить адрес и способ получения
+    .grid__col-md-6.grid--offset-left-6 
+      a(href="#").button.button_primary.steps__button.grid--justify-center.grid__col-md-3
+        |Продолжить
