--- a/src/components/steps/steps.pug
+++ b/src/components/steps/steps.pug
@@ -12,5 +12,6 @@ mixin steps
         |Заказ оформлен!
     //include /components/steps/step-1.1
     //include /components/steps/step-1.2
-    include /components/steps/step-2
+    //include /components/steps/step-2
+    include /components/steps/step-3
     
