--- a/src/components/steps/step-1_2.pug
+++ b/src/components/steps/step-1_2.pug
@@ -15,13 +15,14 @@
           |Населенный пункт (город, поселок)*
         label.form__label.steps__label(for="street") 
           |Улица*
-        p.
-          *Доставка в удобное для вас место и время. Оплата наличными прямо на месте.
-          * Доставка по Санкт-Петербургу 
-          осуществляется бесплатно, по 
-          регионам транспортными компаниями. 
-          Доставка до транспортной компании 
-          бесплатно.
+        p
+          |* Доставка в удобное для вас место и время. Оплата наличными прямо на месте.
+          br
+          |* Доставка по Санкт-Петербургу 
+          |осуществляется бесплатно, по 
+          |регионам транспортными компаниями. 
+          |Доставка до транспортной компании 
+          |бесплатно.
       .grid__col-md-6
         input#city(type="text").form__input.steps__input
         input#street(type="text").form__input.steps__input
