--- a/src/components/steps/step-2.pug
+++ b/src/components/steps/step-2.pug
@@ -29,5 +29,5 @@
       a(href="#").button.button_hollow.steps__button.grid--justify-center
         |Изменить адрес и способ получения
     .grid__col-md-6.grid--offset-left-6 
-      a(href="#").button.button_primary.steps__button.grid--justify-center.grid__col-md-3
+      button(type="button").button.steps__button.button_primary.grid--justify-center.grid--align-center.grid__col-md-3
         |Продолжить
