--- a/src/components/steps/step-3.pug
+++ b/src/components/steps/step-3.pug
@@ -2,6 +2,6 @@
   h1.steps__title
     |Ваш заказ успешно оформлен
   .grid.grid--justify-center
-    button(type="button").button.button_primary.steps__button.grid__col-md-2.grid--align-center.grid--align-self-end
+    a(href="#").button.button_primary.steps__button.grid__col-md-2.u--txt-center
       |Перейти к оплате
     
