--- a/src/components/steps/steps.pug
+++ b/src/components/steps/steps.pug
@@ -10,8 +10,8 @@ mixin steps
         |Подтверждение
       li.steps__item
         |Заказ оформлен!
-    //include /components/steps/step-1.1
-    //include /components/steps/step-1.2
-    //include /components/steps/step-2
+    include /components/steps/step-1_1
+    include /components/steps/step-1_2
+    include /components/steps/step-2
     include /components/steps/step-3
     
