--- a/src/components/how-to/_how-to.scss
+++ b/src/components/how-to/_how-to.scss
@@ -1,5 +1,6 @@
 .how-to {
   &__title {
+    padding-left: $reflex-cell-spacing;
     margin-bottom: 5rem;
   }
   &__description {
@@ -10,5 +11,13 @@
     vertical-align: middle;
     margin-right: 5rem;
     font-size: 3rem;
+  }
+  &__icon:hover {
+    color: $primary;
+  }
+  &__icon.icon-car {
+    width: 31px;
+    height: 26px;
+    background-size: contain;
   }
 }
