Done how to buy

--- a/src/components/how-to/_how-to.scss
+++ b/src/components/how-to/_how-to.scss
@@ -20,4 +20,9 @@
     height: 26px;
     background-size: contain;
   }
+  // &__icon.icon-envelope {
+  //   width: 30px;
+  //   height: 30px;
+  //   background-size: contain;
+  // }
 }
