--- a/src/pug/pages/how-to-buy.pug
+++ b/src/pug/pages/how-to-buy.pug
@@ -18,7 +18,7 @@ block content
               span.u--txt-bold Вы можете заказать наши товары любым удобным для вас способом:
           .grid
             .grid__col-md-2
-              i.fa.fa-hand-pointer-o.how-to__icon
+              i.icon-hand.icon-hand-dims.how-to__icon
             .grid__col-md-10.how-to__description
               span.u--txt-bold На сайте. 
               span.u--txt-thin Для этого достаточно выбрать понравившийся вам товар в каталоге, положить его в виртуальную корзину и оформить покупку.
@@ -30,7 +30,7 @@ block content
               span.u--txt-thin Наши операторы проконсультируют вас по вопросам, связанным с техническими характеристиками и потребительскими свойствами товаров, и примут ваш заказ.
           .grid
             .grid__col-md-2        
-              i.icon-envelope.how-to__icon
+              i.icon-envelope-open.icon-envelope-open-dims.how-to__icon
             .grid__col-md-10.how-to__description
               span.u--txt-bold По электронной почте.
               span.u--txt-thin В письме необходимо указать наименования (коды) выбранных вами товаров и их количество, а также данные о себе - имя, фамилию, телефон, персональную скидку (если она у вас есть).
