Done hot to pages

--- a/src/pug/pages/how-to-pay.pug
+++ b/src/pug/pages/how-to-pay.pug
@@ -24,7 +24,7 @@ block content
               span.u--txt-thin Вы можете оплатить покупку наличными или по банковской карте при получении товара на складе или с доставкой.
           .grid
             .grid__col-md-2        
-              i.fa.fa-hand-pointer-o.how-to__icon
+              i.icon-hand.icon-hand-dims.how-to__icon
             .grid__col-md-10.how-to__description
               span.u--txt-bold На сайте.
               span.u--txt-thin Мы принимаем к оплате банковские карты и электронные деньги.
