Some fixes for mobile

--- a/src/components/steps/step-1_2.pug
+++ b/src/components/steps/step-1_2.pug
@@ -24,8 +24,8 @@
           |Доставка до транспортной компании 
           |бесплатно.
       .grid__col-md-6
-        input#city(type="text").form__input.steps__input
-        input#street(type="text").form__input.steps__input
+        input#city(type="text",placeholder="Город").form__input.steps__input
+        input#street(type="text",placeholder="Улица").form__input.steps__input
         .grid
           .grid__col-md-6.grid__col--bleed-left
             .grid__cell.u--clearfix
